# Advent-of-Code-2018

./: CMakeLists.txt  puzzle_01_1.pl  puzzle_01_2.pl  puzzle_02_1.pl  puzzle_02_2.pl  puzzle_03_1.pl  puzzle_03_2.pl  puzzle_04_1.pl  puzzle_04_2.pl  puzzle_05_1.pl  puzzle_05_2.pl  puzzle_06_1.pl  puzzle_06_2.pl  puzzle_07_1.pl  puzzle_07_2.pl  puzzle_07_2_reddit.pl  puzzle_08_1.pl  puzzle_08_2.pl  puzzle_09_1.pl  puzzle_09_2.cc  puzzle_09_2.pl  puzzle_10_1.pl  puzzle_11_1.pl  puzzle_11_2.pl  puzzle_12_1.pl  puzzle_12_2.pl  puzzle_13_1.pl  puzzle_13_2.pl  puzzle_15.cc  puzzle_16.cc  puzzle_17.cc  puzzle_18.cc  puzzle_19.cc  puzzle_20.cc  puzzle_21.cc  puzzle_22.cc  puzzle_23.cc  puzzle_24.cc  puzzle_25.cc
