cmake_minimum_required(VERSION 3.0)

project(Puzzle_2018)

find_package(sklik-cmake-utils REQUIRED)

sklik_compile_executable(
    NAME puzzle_01_1
    SOURCES
        puzzle_01_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_01_2
    SOURCES
        puzzle_01_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_02_1
    SOURCES
        puzzle_02_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_02_2
    SOURCES
        puzzle_02_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_03_1
    SOURCES
        puzzle_03_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_03_2
    SOURCES
        puzzle_03_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_04_1
    SOURCES
        puzzle_04_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_04_2
    SOURCES
        puzzle_04_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_05_1
    SOURCES
        puzzle_05_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_05_2
    SOURCES
        puzzle_05_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_06_1
    SOURCES
        puzzle_06_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_06_2
    SOURCES
        puzzle_06_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_07_1
    SOURCES
        puzzle_07_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_07_2
    SOURCES
        puzzle_07_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_08_1
    SOURCES
        puzzle_08_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_08_2
    SOURCES
        puzzle_08_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_09_1
    SOURCES
        puzzle_09_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_09_2
    SOURCES
        puzzle_09_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_10_1
    SOURCES
        puzzle_10_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_10_2
    SOURCES
        puzzle_10_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_11_1
    SOURCES
        puzzle_11_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_11_2
    SOURCES
        puzzle_11_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_12_1
    SOURCES
        puzzle_12_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_12_2
    SOURCES
        puzzle_12_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_13_1
    SOURCES
        puzzle_13_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_13_2
    SOURCES
        puzzle_13_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_14_1
    SOURCES
        puzzle_14_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_14_2
    SOURCES
        puzzle_14_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_15_1
    SOURCES
        puzzle_15_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_15_2
    SOURCES
        puzzle_15_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_16_1
    SOURCES
        puzzle_16_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_16_2
    SOURCES
        puzzle_16_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_17_1
    SOURCES
        puzzle_17_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_17_2
    SOURCES
        puzzle_17_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_18_1
    SOURCES
        puzzle_18_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_18_2
    SOURCES
        puzzle_18_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_19_1
    SOURCES
        puzzle_19_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_19_2
    SOURCES
        puzzle_19_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_20_1
    SOURCES
        puzzle_20_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_20_2
    SOURCES
        puzzle_20_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_21_1
    SOURCES
        puzzle_21_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_21_2
    SOURCES
        puzzle_21_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_22_1
    SOURCES
        puzzle_22_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_22_2
    SOURCES
        puzzle_22_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

sklik_compile_executable(
    NAME puzzle_23_1
    SOURCES
        puzzle_23_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O2
)

# sklik_compile_executable(
#     NAME puzzle_23_2
#     SOURCES
#         puzzle_23_2.cc
#     COMPILE_OPTIONS
#         -Wall -std=c++14 -g -O2
# )

sklik_compile_executable(
    NAME puzzle_24_1
    SOURCES
        puzzle_24_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O0 -D_GLIBCXX_DEBUG
)

sklik_compile_executable(
    NAME puzzle_24_2
    SOURCES
        puzzle_24_2.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O0 -D_GLIBCXX_DEBUG
)

sklik_compile_executable(
    NAME puzzle_25_1
    SOURCES
        puzzle_25_1.cc
    COMPILE_OPTIONS
        -Wall -std=c++14 -g -O0 -D_GLIBCXX_DEBUG
)
